@@ -199,8 +199,8 @@ html[theme="default"] {
 
     .navbar-text {
         .badge {
-            max-width: 5em;
-            min-width: 5em;
+            max-width: 7em;
+            min-width: 7em;
             overflow: hidden;
             text-overflow: ellipsis;
         }
